--- a/arch/arm64/Makefile
+++ b/arch/arm64/Makefile
@@ -82,8 +82,7 @@ ifeq ($(CONFIG_COMPAT_VDSO), y)
   ifeq ($(CROSS_COMPILE_COMPAT),)
     $(error CROSS_COMPILE_COMPAT not defined or empty, the compat vDSO will not be built)
   else ifeq ($(cc-name),clang)
-    export CLANG_TRIPLE_ARM32 ?= $(CROSS_COMPILE_COMPAT)
-    export CLANG_TARGET_ARM32 := --target=$(notdir $(CLANG_TRIPLE_ARM32:%-=%))
+    export CROSS_COMPILE_COMPAT
     export CONFIG_VDSO32 := y
     vdso32 := -DCONFIG_VDSO32=1
   else ifeq ($(shell which $(CROSS_COMPILE_COMPAT)$(cc-name) 2> /dev/null),)
