arm64: Switch to CROSS_COMPILE_COMPAT for vDSO32 compilation
Preparing for upstream commit 0fa97e9403c767a4af63cfb5a3badbbe69426085
("arm64: vdso32: Allow ld.lld to properly link the VDSO") and more.

Change-Id: If4f148a53de1ca2fbac1ab9104af38468cbc29eb
Signed-off-by: Nauval Rizky <enuma.alrizky@gmail.com>
Signed-off-by: Fiqri Ardyansyah <fiqri0927936@gmail.com>
Signed-off-by: Cyber Knight <cyberknight755@gmail.com>

--- a/arch/arm64/kernel/vdso32/Makefile
+++ b/arch/arm64/kernel/vdso32/Makefile
@@ -7,13 +7,13 @@
 ifeq ($(cc-name),clang)
   CC_ARM32 := $(CC) $(CLANG_TARGET_ARM32)
 else
-  CC_ARM32 := $(CROSS_COMPILE_ARM32)$(cc-name)
+  CC_ARM32 := $(CROSS_COMPILE_COMPAT)$(cc-name)
 endif
 
 ifneq ($(LLVM),)
 LD_COMPAT ?= $(LD)
 else
-LD_COMPAT ?= $(CROSS_COMPILE_ARM32)ld
+LD_COMPAT ?= $(CROSS_COMPILE_COMPAT)ld
 endif
 
 # Same as cc-*option, but using CC_ARM32 instead of CC
