--- a/scripts/Makefile.build
+++ b/scripts/Makefile.build
@@ -225,7 +225,7 @@ cmd_modversions_c =								\
 			    > $(@D)/$(@F).symversions;				\
 		fi;								\
 	else									\
-		if $(LLVM_DIS) -o=- $(@D)/.tmp_$(@F) 2>/dev/null | grep -q __ksymtab; then	\
+		if $(LLVM_NM) $(@D)/.tmp_$(@F) 2>/dev/null | grep -q __ksymtab; then	\
 			$(call cmd_gensymtypes_c,$(KBUILD_SYMTYPES),$(@:.o=.symtypes)) \
 			    > $(@D)/$(@F).symversions;				\
 		fi;								\
