input: touchscreen: Import k6_focaltech_3658u driver
* from sweet_k6a-r-oss

Change-Id: I94d13ef6154d36f908036535f72115d27b1baf85
Signed-off-by: Fiqri Ardyansyah <fiqri0927936@gmail.com>

--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -14,6 +14,7 @@ source "drivers/input/touchscreen/xiaomi/Kconfig"
 source "drivers/input/touchscreen/focaltech_spi/Kconfig"
 source "drivers/input/touchscreen/gt9897t/Kconfig"
 source "drivers/input/touchscreen/gt9896/Kconfig"
+source "drivers/input/touchscreen/k6_focaltech_3658u/Kconfig"
 
 config TOUCHSCREEN_TDDI_DBCLK
         bool "TDDI IC enable double click"
