--- a/firmware/Makefile
+++ b/firmware/Makefile
@@ -15,6 +15,7 @@ fw-shipped-$(CONFIG_TOUCHSCREEN_FTS) += focaltech_ts_fw.bin
 fw-shipped-$(CONFIG_TOUCHSCREEN_GOODIX_BRL) += goodix_gt9897t_cfg.bin goodix_gt9897t_fw.bin
 
 fw-shipped-$(CONFIG_TOUCHSCREEN_GOODIX_GTX9896_I2C) += goodix_gt9896_cfg.bin goodix_gt9896_fw.bin
+fw-shipped-$(CONFIG_TOUCHSCREEN_FTS_K6) += focaltech_ts_fw_k6.bin
 
 fw-shipped-all := $(fw-shipped-y) $(fw-shipped-m) $(fw-shipped-)
 quiet_cmd_ihex  = IHEX    $@
