net: tcp: bbrplus
ref: https://github.com/UJX6N/bbrplus-5.4

Signed-off-by: TogoFire <togofire@mailfence.com>
Change-Id: Id48748ed832dccb4344a360893f1fc544ac223fa

--- a/net/ipv4/Kconfig
+++ b/net/ipv4/Kconfig
@@ -503,7 +503,7 @@ config TCP_CONG_BIC
 
 config TCP_CONG_CUBIC
 	tristate "CUBIC TCP"
-	default y
+	default n
 	---help---
 	This is version 2.0 of BIC-TCP which uses a cubic growth function
 	among other techniques.
@@ -686,9 +686,17 @@ config TCP_CONG_BBR
 	bufferbloat, policers, or AQM schemes that do not provide a delay
 	signal. It requires the fq ("Fair Queue") pacing packet scheduler.
 
+config TCP_CONG_BBRPLUS
+        tristate "BBRPLUS TCP"
+        ---help---
+
+        BBRplus is an enhanced version of BBR (Bottleneck Bandwidth and RTT).
+        Originally introduced by dog250 & cx9208.
+        Same as BBR, requires the fq ("Fair Queue") pacing packet scheduler.
+
 choice
 	prompt "Default TCP congestion control"
-	default DEFAULT_CUBIC
+	default DEFAULT_BBRPLUS
 	help
 	  Select the TCP congestion control that will be used by default
 	  for all connections.
@@ -723,6 +731,9 @@ choice
 	config DEFAULT_BBR
 		bool "BBR" if TCP_CONG_BBR=y
 
+        config DEFAULT_BBRPLUS
+                bool "BBRPLUS" if TCP_CONG_BBRPLUS=y
+
 	config DEFAULT_RENO
 		bool "Reno"
 endchoice
@@ -747,7 +758,8 @@ config DEFAULT_TCP_CONG
 	default "dctcp" if DEFAULT_DCTCP
 	default "cdg" if DEFAULT_CDG
 	default "bbr" if DEFAULT_BBR
-	default "cubic"
+        default "bbrplus" if DEFAULT_BBRPLUS
+	default "bbrplus"
 
 config TCP_MD5SIG
 	bool "TCP: MD5 Signature Option support (RFC2385)"
