arm64: configs: generate sweet_defconfig
Signed-off-by: clrowex <clrowex@gmail.com>

--- a/arch/arm64/configs/sweet_defconfig
+++ b/arch/arm64/configs/sweet_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.348-openela Kernel Configuration
+# Linux/arm64 4.14.350 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -47,8 +47,8 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-VantomKernel"
-# CONFIG_LOCALVERSION_AUTO is not set
+CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION_AUTO=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
@@ -121,8 +121,7 @@ CONFIG_RCU_NEED_SEGCBLIST=y
 CONFIG_RCU_FANOUT=64
 CONFIG_RCU_FANOUT_LEAF=16
 CONFIG_RCU_FAST_NO_HZ=y
-CONFIG_RCU_BOOST=y
-CONFIG_RCU_BOOST_DELAY=500
+# CONFIG_RCU_BOOST is not set
 CONFIG_RCU_NOCB_CPU=y
 CONFIG_BUILD_BIN2C=y
 CONFIG_IKCONFIG=y
@@ -138,8 +137,9 @@ CONFIG_GENERIC_SCHED_CLOCK=y
 # FAIR Scheuler tunables
 #
 # CONFIG_PELT_UTIL_HALFLIFE_32 is not set
-CONFIG_PELT_UTIL_HALFLIFE_16=y
+# CONFIG_PELT_UTIL_HALFLIFE_16 is not set
 # CONFIG_PELT_UTIL_HALFLIFE_8 is not set
+CONFIG_PELT_UTIL_HALFLIFE_4=y
 
 #
 # Scheduler features
@@ -176,6 +176,8 @@ CONFIG_UTS_NS=y
 # CONFIG_USER_NS is not set
 # CONFIG_PID_NS is not set
 CONFIG_NET_NS=y
+CONFIG_SCHED_BORE=y
+CONFIG_SCHED_CASS=y
 # CONFIG_SCHED_AUTOGROUP is not set
 # CONFIG_SCHED_TUNE is not set
 CONFIG_SCHED_TUNE_DUMMY=y
@@ -191,7 +193,7 @@ CONFIG_RD_BZIP2=y
 CONFIG_RD_LZMA=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
-# CONFIG_RD_LZ4 is not set
+CONFIG_RD_LZ4=y
 CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 CONFIG_SYSCTL=y
@@ -206,7 +208,7 @@ CONFIG_SYSFS_SYSCALL=y
 # CONFIG_SYSCTL_SYSCALL is not set
 CONFIG_POSIX_TIMERS=y
 CONFIG_KALLSYMS=y
-CONFIG_KALLSYMS_ALL=y
+# CONFIG_KALLSYMS_ALL is not set
 # CONFIG_KALLSYMS_ABSOLUTE_PERCPU is not set
 CONFIG_KALLSYMS_BASE_RELATIVE=y
 CONFIG_PRINTK=y
@@ -249,7 +251,7 @@ CONFIG_SLAB_FREELIST_RANDOM=y
 CONFIG_SLAB_FREELIST_HARDENED=y
 CONFIG_SLUB_CPU_PARTIAL=y
 CONFIG_SYSTEM_DATA_VERIFICATION=y
-CONFIG_PROFILING=y
+# CONFIG_PROFILING is not set
 CONFIG_TRACEPOINTS=y
 # CONFIG_KPROBES is not set
 CONFIG_JUMP_LABEL=y
@@ -268,7 +270,6 @@ CONFIG_ARCH_HAS_SET_MEMORY=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
-CONFIG_HAVE_HW_BREAKPOINT=y
 CONFIG_HAVE_PERF_REGS=y
 CONFIG_HAVE_PERF_USER_STACK_DUMP=y
 CONFIG_HAVE_ARCH_JUMP_LABEL=y
@@ -523,6 +524,7 @@ CONFIG_PCI_MSI_IRQ_DOMAIN=y
 # CONFIG_PCI_DEBUG is not set
 # CONFIG_PCI_REALLOC_ENABLE_AUTO is not set
 # CONFIG_PCI_STUB is not set
+CONFIG_PCI_LOCKLESS_CONFIG=y
 # CONFIG_PCI_IOV is not set
 # CONFIG_PCI_PRI is not set
 # CONFIG_PCI_PASID is not set
@@ -608,12 +610,7 @@ CONFIG_HOLES_IN_ZONE=y
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
-# CONFIG_HZ_100 is not set
-CONFIG_HZ_250=y
-# CONFIG_HZ_300 is not set
-# CONFIG_HZ_500 is not set
-# CONFIG_HZ_1000 is not set
-CONFIG_HZ=250
+CONFIG_HZ=60
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_SUPPORTS_DEBUG_PAGEALLOC=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
@@ -632,6 +629,9 @@ CONFIG_HAVE_MEMORY_PRESENT=y
 CONFIG_SPARSEMEM_EXTREME=y
 CONFIG_SPARSEMEM_VMEMMAP_ENABLE=y
 CONFIG_SPARSEMEM_VMEMMAP=y
+CONFIG_ANON_MIN_KBYTES=196608
+CONFIG_CLEAN_LOW_KBYTES=393216
+CONFIG_CLEAN_MIN_KBYTES=196608
 CONFIG_HAVE_MEMBLOCK=y
 CONFIG_NO_BOOTMEM=y
 CONFIG_MEMORY_ISOLATION=y
@@ -720,6 +720,8 @@ CONFIG_CMDLINE="ramoops_memreserve=4M"
 # CONFIG_CMDLINE_FROM_BOOTLOADER is not set
 CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
+# CONFIG_CMDLINE_HWC_IS_SKU is not set
+# CONFIG_CMDLINE_HWC_IS_PRODUCT_SKU is not set
 # CONFIG_EFI is not set
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
 CONFIG_BUILD_ARM64_KERNEL_COMPRESSION_GZIP=y
@@ -741,7 +743,7 @@ CONFIG_COREDUMP=y
 CONFIG_COMPAT=y
 CONFIG_KUSER_HELPERS=y
 CONFIG_COMPAT_VDSO=y
-CONFIG_CROSS_COMPILE_ARM32=""
+CONFIG_CROSS_COMPILE_COMPAT=""
 
 #
 # Power management options
@@ -1488,7 +1490,7 @@ CONFIG_ZRAM_DEF_COMP="lz4"
 CONFIG_ZRAM_DEDUP=y
 CONFIG_ZRAM_WRITEBACK=y
 # CONFIG_ZRAM_MEMORY_TRACKING is not set
-CONFIG_ZRAM_SIZE_OVERRIDE=2
+CONFIG_ZRAM_SIZE_OVERRIDE=4
 # CONFIG_BLK_DEV_DAC960 is not set
 # CONFIG_BLK_DEV_UMEM is not set
 # CONFIG_BLK_DEV_COW_COMMON is not set
@@ -2759,6 +2761,7 @@ CONFIG_ONEWIRE_GPIO=y
 #
 CONFIG_BQ2597X_CHARGE_PUMP=y
 # CONFIG_K9A_CHARGE is not set
+CONFIG_CHARGER_LN8000=y
 CONFIG_HWMON=y
 # CONFIG_HWMON_VID is not set
 # CONFIG_HWMON_DEBUG_CHIP is not set
@@ -3154,6 +3157,7 @@ CONFIG_V4L2_MEM2MEM_DEV=y
 CONFIG_VIDEOBUF2_CORE=y
 CONFIG_VIDEOBUF2_MEMOPS=y
 CONFIG_VIDEOBUF2_VMALLOC=y
+CONFIG_VIDEOBUF2_DMA_SG=y
 # CONFIG_V4L2_LOOPBACK is not set
 CONFIG_DVB_CORE=y
 CONFIG_DVB_NET=y
@@ -3425,6 +3429,7 @@ CONFIG_EXPOSURE_ADJUSTMENT=y
 CONFIG_DRM_SDE_EVTLOG_DEBUG=y
 CONFIG_DRM_SDE_RSC=y
 # CONFIG_DRM_SDE_XLOG_DEBUG is not set
+# CONFIG_FENCE_DEBUG is not set
 # CONFIG_DRM_MSM_LEASE is not set
 CONFIG_DRM_PANEL=y
 
@@ -5349,6 +5354,7 @@ CONFIG_ANDROID_BINDER_DEVICES="binder,hwbinder,vndbinder"
 CONFIG_ANDROID_SIMPLE_LMK=y
 CONFIG_ANDROID_SIMPLE_LMK_MINFREE=245
 CONFIG_ANDROID_SIMPLE_LMK_TIMEOUT_MSEC=100
+CONFIG_ANDROID_SPOOF_KERNEL_VERSION_FOR_BPF=y
 # CONFIG_LIBNVDIMM is not set
 CONFIG_DAX=y
 CONFIG_NVMEM=y
@@ -5359,6 +5365,8 @@ CONFIG_STM=y
 # CONFIG_STM_SOURCE_CONSOLE is not set
 # CONFIG_STM_SOURCE_HEARTBEAT is not set
 # CONFIG_INTEL_TH is not set
+CONFIG_CORESIGHT_PLACEHOLDER=y
+CONFIG_CORESIGHT_AMBA_PLACEHOLDER=y
 # CONFIG_FPGA is not set
 
 #
@@ -5376,6 +5384,32 @@ CONFIG_ESOC_MDM_DRV=y
 CONFIG_ESOC_MDM_DBG_ENG=y
 # CONFIG_MDM_DBG_REQ_ENG is not set
 CONFIG_AINUR_DTS_SW=y
+
+#
+# KernelSU
+#
+CONFIG_KSU=y
+# CONFIG_KSU_DEBUG is not set
+# CONFIG_KSU_ALLOWLIST_WORKAROUND is not set
+
+#
+# KernelSU - SUSFS
+#
+CONFIG_KSU_SUSFS=y
+CONFIG_KSU_SUSFS_HAS_MAGIC_MOUNT=y
+CONFIG_KSU_SUSFS_SUS_PATH=y
+CONFIG_KSU_SUSFS_SUS_MOUNT=y
+CONFIG_KSU_SUSFS_AUTO_ADD_SUS_KSU_DEFAULT_MOUNT=y
+CONFIG_KSU_SUSFS_AUTO_ADD_SUS_BIND_MOUNT=y
+CONFIG_KSU_SUSFS_SUS_KSTAT=y
+CONFIG_KSU_SUSFS_SUS_OVERLAYFS=y
+CONFIG_KSU_SUSFS_TRY_UMOUNT=y
+CONFIG_KSU_SUSFS_AUTO_ADD_TRY_UMOUNT_FOR_BIND_MOUNT=y
+CONFIG_KSU_SUSFS_SPOOF_UNAME=y
+CONFIG_KSU_SUSFS_ENABLE_LOG=y
+CONFIG_KSU_SUSFS_HIDE_KSU_SUSFS_SYMBOLS=y
+CONFIG_KSU_SUSFS_SPOOF_CMDLINE_OR_BOOTCONFIG=y
+CONFIG_KSU_SUSFS_OPEN_REDIRECT=y
 
 #
 # Firmware Drivers
@@ -5523,7 +5557,7 @@ CONFIG_MISC_FILESYSTEMS=y
 # CONFIG_AFFS_FS is not set
 CONFIG_ECRYPT_FS=y
 CONFIG_ECRYPT_FS_MESSAGING=y
-# CONFIG_SDCARD_FS is not set
+CONFIG_SDCARD_FS=y
 # CONFIG_HFS_FS is not set
 # CONFIG_HFSPLUS_FS is not set
 # CONFIG_BEFS_FS is not set
@@ -5539,9 +5573,9 @@ CONFIG_VXFS_FS=y
 # CONFIG_QNX6FS_FS is not set
 # CONFIG_ROMFS_FS is not set
 CONFIG_PSTORE=y
-CONFIG_PSTORE_ZLIB_COMPRESS=y
+# CONFIG_PSTORE_ZLIB_COMPRESS is not set
 # CONFIG_PSTORE_LZO_COMPRESS is not set
-# CONFIG_PSTORE_LZ4_COMPRESS is not set
+CONFIG_PSTORE_LZ4_COMPRESS=y
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
 CONFIG_PSTORE_RAM=y
@@ -5639,7 +5673,7 @@ CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
 #
 # Compile-time checks and compiler options
 #
-CONFIG_DEBUG_INFO=y
+# CONFIG_DEBUG_INFO is not set
 # CONFIG_DEBUG_INFO_REDUCED is not set
 # CONFIG_DEBUG_INFO_SPLIT is not set
 # CONFIG_DEBUG_INFO_DWARF4 is not set
@@ -5652,7 +5686,7 @@ CONFIG_FRAME_WARN=0
 # CONFIG_UNUSED_SYMBOLS is not set
 CONFIG_PAGE_OWNER=y
 # CONFIG_PAGE_OWNER_ENABLE_DEFAULT is not set
-CONFIG_DEBUG_FS=y
+# CONFIG_DEBUG_FS is not set
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 CONFIG_SECTION_MISMATCH_WARN_ONLY=y
@@ -5662,7 +5696,7 @@ CONFIG_FRAME_POINTER=y
 CONFIG_MAGIC_SYSRQ=y
 CONFIG_MAGIC_SYSRQ_DEFAULT_ENABLE=0x1
 CONFIG_MAGIC_SYSRQ_SERIAL=y
-CONFIG_DEBUG_KERNEL=y
+# CONFIG_DEBUG_KERNEL is not set 
 
 #
 # Memory Debugging
@@ -6020,11 +6054,11 @@ CONFIG_CRYPTO_TWOFISH_COMMON=y
 #
 # Compression
 #
-CONFIG_CRYPTO_DEFLATE=y
+# CONFIG_CRYPTO_DEFLATE is not set
 # CONFIG_CRYPTO_LZO is not set
 # CONFIG_CRYPTO_842 is not set
 CONFIG_CRYPTO_LZ4=y
-CONFIG_CRYPTO_LZ4KD=y
+# CONFIG_CRYPTO_LZ4KD is not set
 # CONFIG_CRYPTO_LZ4HC is not set
 # CONFIG_CRYPTO_ZSTD is not set
 
@@ -6094,6 +6128,7 @@ CONFIG_RATIONAL=y
 CONFIG_GENERIC_STRNCPY_FROM_USER=y
 CONFIG_GENERIC_STRNLEN_USER=y
 CONFIG_GENERIC_NET_UTILS=y
+CONFIG_GENERIC_FIND_FIRST_BIT=y
 CONFIG_GENERIC_PCI_IOMAP=y
 CONFIG_GENERIC_IO=y
 CONFIG_ARCH_USE_CMPXCHG_LOCKREF=y
