--- a/.github/workflows/miui.yml
+++ b/.github/workflows/miui.yml
@@ -20,21 +20,16 @@ jobs:
            sudo apt install bc cpio flex bison aptitude git python-is-python3 tar perl wget curl lz4 -y
            sudo aptitude install libssl-dev -y
                 
-    - name: Fetch toolchains
+    - name: clone toolchains
       run: |
             mkdir clang && curl https://android.googlesource.com/platform/prebuilts/clang/host/linux-x86/+archive/refs/heads/main/clang-r547379.tar.gz -RLO && tar -C clang/ -xf clang-*.tar.gz
             git clone --depth=1 https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9 gcc64
             git clone --depth=1 https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_arm_arm-linux-androideabi-4.9 gcc32
             
-    - name: Fetch KernelSU Next 
+    - name: clone KernelSU Next SuSFS
       run: |
            curl -LSs "https://raw.githubusercontent.com/KernelSU-Next/KernelSU-Next/next/kernel/setup.sh" | bash -s next-susfs-dev
-           
-    - name: MIUI Dimensi
-      run: |
-           sed -i 's/qcom,mdss-pan-physical-width-dimension = <69>;$/qcom,mdss-pan-physical-width-dimension = <695>;/' arch/arm64/boot/dts/qcom/xiaomi/sweet/dsi-panel-k6-38-0c-0a-fhd-dsc-video.dtsi
-           sed -i 's/qcom,mdss-pan-physical-height-dimension = <154>;$/qcom,mdss-pan-physical-height-dimension = <1546>;/' arch/arm64/boot/dts/qcom/xiaomi/sweet/dsi-panel-k6-38-0c-0a-fhd-dsc-video.dtsi 
-                         
+                              
     - name: Build 
       run: |
            export ARCH=arm64
@@ -57,7 +52,7 @@ jobs:
         name: defconfig-${{ env.BUILD_TIME }}
         path: out/sweet_defconfig.txt
       
-    - name: Clone Anykernel3 - Priper Image
+    - name: clone Anykernel3 & Priper Image
       run: |
             git clone --depth=1 https://github.com/Taufik-Daulay/AnyKernel3.git -b main AnyKernel3  
             cp out/arch/arm64/boot/Image.gz AnyKernel3/Image.gz
