--- a/arch/arm64/configs/sweet_defconfig
+++ b/arch/arm64/configs/sweet_defconfig
@@ -49,6 +49,7 @@ CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
 CONFIG_LOCALVERSION="-Zenkernel"
 # CONFIG_LOCALVERSION_AUTO is not set
+# CONFIG_LOCALVERSION_SHA is not set 
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
@@ -195,8 +196,12 @@ CONFIG_RD_LZMA=y
 # CONFIG_RD_LZO is not set
 CONFIG_RD_LZ4=y
 # CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE is not set
-CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE_O3=y
+CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE_03=y
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
+# CONFIG_LTO_GCC is not set
+# CONFIG_GCC_GRAPHITE is not set 
+CONFIG_HAVE_LD_DEAD_CODE_DATA_ELIMINATION=y
+CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_SYSCTL=y
 CONFIG_HAVE_UID16=y
 CONFIG_SYSCTL_EXCEPTION_TRACE=y
@@ -290,11 +295,12 @@ CONFIG_CC_STACKPROTECTOR=y
 # CONFIG_CC_STACKPROTECTOR_REGULAR is not set
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_THIN_ARCHIVES=y
-# CONFIG_LTO is not set
+CONFIG_LTO=y
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 CONFIG_ARCH_SUPPORTS_THINLTO=y
-CONFIG_LTO_NONE=y
-# CONFIG_LTO_CLANG is not set
+# CONFIG_LTO_NONE is not set 
+# CONFIG_THINLTO is not set 
+CONFIG_LTO_CLANG=y
 CONFIG_ARCH_SUPPORTS_SHADOW_CALL_STACK=y
 CONFIG_ROP_PROTECTION_NONE=y
 # CONFIG_SHADOW_CALL_STACK is not set
@@ -2631,7 +2637,7 @@ CONFIG_PINCTRL_QCOM_SPMI_PMIC=y
 # CONFIG_PINCTRL_SM8150 is not set
 CONFIG_PINCTRL_SDMMAGPIE=y
 # CONFIG_PINCTRL_SDMSHRIKE is not set
-CONFIG_PINCTRL_SM6150=y
+# CONFIG_PINCTRL_SM6150 is not set
 # CONFIG_PINCTRL_ATOLL is not set
 # CONFIG_PINCTRL_TRINKET is not set
 # CONFIG_PINCTRL_SDXPRAIRIE is not set
