--- a/arch/arm64/configs/sweet_defconfig
+++ b/arch/arm64/configs/sweet_defconfig
@@ -47,9 +47,10 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Zenkernel"
-# CONFIG_LOCALVERSION_AUTO is not set
-# CONFIG_LOCALVERSION_SHA is not set 
+CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION_AUTO=y
+# CONFIG_LOCALVERSION_SHA is not set
+CONFIG_INLINE_OPTIMIZATION=y
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
@@ -173,7 +174,7 @@ CONFIG_SOCK_CGROUP_DATA=y
 # CONFIG_SCHED_CORE_CTL is not set
 # CONFIG_CHECKPOINT_RESTORE is not set
 CONFIG_NAMESPACES=y
-CONFIG_UTS_NS=y
+# CONFIG_UTS_NS is not set
 # CONFIG_USER_NS is not set
 # CONFIG_PID_NS is not set
 CONFIG_NET_NS=y
@@ -181,7 +182,7 @@ CONFIG_SCHED_BORE=y
 CONFIG_SCHED_CASS=y
 # CONFIG_SCHED_AUTOGROUP is not set
 # CONFIG_SCHED_TUNE is not set
-# CONFIG_SCHED_TUNE_DUMMY is not set
+CONFIG_SCHED_TUNE_DUMMY=y
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
@@ -195,11 +196,11 @@ CONFIG_RD_LZMA=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 CONFIG_RD_LZ4=y
-# CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE is not set
-CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE_03=y
+CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
+# CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE_O3 is not set
 # CONFIG_CC_OPTIMIZE_FOR_SIZE is not set
 # CONFIG_LTO_GCC is not set
-# CONFIG_GCC_GRAPHITE is not set 
+# CONFIG_GCC_GRAPHITE is not set
 CONFIG_HAVE_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_LD_DEAD_CODE_DATA_ELIMINATION=y
 CONFIG_SYSCTL=y
@@ -219,7 +220,7 @@ CONFIG_KALLSYMS=y
 CONFIG_KALLSYMS_BASE_RELATIVE=y
 CONFIG_PRINTK=y
 CONFIG_BUG=y
-CONFIG_ELF_CORE=y
+# CONFIG_ELF_CORE is not set
 CONFIG_BASE_FULL=y
 CONFIG_FUTEX=y
 CONFIG_FUTEX_PI=y
@@ -298,9 +299,10 @@ CONFIG_THIN_ARCHIVES=y
 CONFIG_LTO=y
 CONFIG_ARCH_SUPPORTS_LTO_CLANG=y
 CONFIG_ARCH_SUPPORTS_THINLTO=y
-# CONFIG_LTO_NONE is not set 
-# CONFIG_THINLTO is not set 
+# CONFIG_THINLTO is not set
+# CONFIG_LTO_NONE is not set
 CONFIG_LTO_CLANG=y
+# CONFIG_CFI_CLANG is not set
 CONFIG_ARCH_SUPPORTS_SHADOW_CALL_STACK=y
 CONFIG_ROP_PROTECTION_NONE=y
 # CONFIG_SHADOW_CALL_STACK is not set
@@ -404,15 +406,21 @@ CONFIG_IOSCHED_ZEN=y
 CONFIG_IOSCHED_ANXIETY=y
 CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_TRIPNDROID=y
-# CONFIG_IOSCHED_FIOPS is not set
-# CONFIG_IOSCHED_SIO is not set 
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
 CONFIG_CFQ_GROUP_IOSCHED=y
-CONFIG_BFQ_GROUP_IOSCHED
-CONFIG_DEFAULT_ZEN=y
-CONFIG_DEFAULT_IOSCHED="zen"
+# CONFIG_DEFAULT_DEADLINE is not set
+# CONFIG_DEFAULT_CFQ is not set
+# CONFIG_DEFAULT_ZEN is not set
+CONFIG_DEFAULT_ANXIETY=y
+# CONFIG_DEFAULT_MAPLE is not set
+# CONFIG_DEFAULT_TRIPNDROID is not set
+# CONFIG_DEFAULT_NOOP is not set
+CONFIG_DEFAULT_IOSCHED="anxiety"
 CONFIG_MQ_IOSCHED_DEADLINE=y
 CONFIG_MQ_IOSCHED_KYBER=y
 CONFIG_IOSCHED_BFQ=y
+CONFIG_BFQ_GROUP_IOSCHED=y
 CONFIG_ASN1=y
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK=y
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK_BH=y
@@ -704,7 +712,7 @@ CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
 CONFIG_SETEND_EMULATION=y
-CONFIG_ARM64_SW_TTBR0_PAN=y
+# CONFIG_ARM64_SW_TTBR0_PAN is not set
 
 #
 # ARMv8.1 architectural features
@@ -723,7 +731,6 @@ CONFIG_ARM64_MODULE_CMODEL_LARGE=y
 CONFIG_ARM64_MODULE_PLTS=y
 CONFIG_RELOCATABLE=y
 CONFIG_RANDOMIZE_BASE=y
-CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 
 #
 # Boot options
@@ -735,7 +742,11 @@ CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_HWC_IS_SKU is not set
 # CONFIG_CMDLINE_HWC_IS_PRODUCT_SKU is not set
 # CONFIG_EFI is not set
-# CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE=y
+CONFIG_IMG_GZ_DTB=y
+# CONFIG_IMG_DTB is not set
+CONFIG_BUILD_ARM64_APPENDED_KERNEL_IMAGE_NAME="Image.gz-dtb"
+CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES=""
 CONFIG_BUILD_ARM64_KERNEL_COMPRESSION_GZIP=y
 # CONFIG_BUILD_ARM64_UNCOMPRESSED_KERNEL is not set
 CONFIG_KRYO_PMU_WORKAROUND=y
@@ -751,7 +762,7 @@ CONFIG_ELFCORE=y
 CONFIG_BINFMT_SCRIPT=y
 # CONFIG_HAVE_AOUT is not set
 # CONFIG_BINFMT_MISC is not set
-CONFIG_COREDUMP=y
+# CONFIG_COREDUMP is not set
 CONFIG_COMPAT=y
 CONFIG_KUSER_HELPERS=y
 CONFIG_COMPAT_VDSO=y
@@ -828,10 +839,10 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 # CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_BOOST is not set
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
-CONFIG_SCHEDUTIL_UP_RATE_LIMIT_LITTLE=500
 CONFIG_SCHEDUTIL_UP_RATE_LIMIT_BIG=500
-CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT_LITTLE=20000
 CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT_BIG=20000
+CONFIG_SCHEDUTIL_UP_RATE_LIMIT_LITTLE=500
+CONFIG_SCHEDUTIL_DOWN_RATE_LIMIT_LITTLE=20000
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 
 #
@@ -1162,7 +1173,7 @@ CONFIG_IP6_NF_IPTABLES=y
 # CONFIG_IP6_NF_MATCH_MH is not set
 CONFIG_IP6_NF_MATCH_RPFILTER=y
 # CONFIG_IP6_NF_MATCH_RT is not set
-# CONFIG_IP6_NF_TARGET_HL is not set
+CONFIG_IP6_NF_TARGET_HL=y
 CONFIG_IP6_NF_FILTER=y
 CONFIG_IP6_NF_TARGET_REJECT=y
 # CONFIG_IP6_NF_TARGET_SYNPROXY is not set
@@ -3903,7 +3914,7 @@ CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 #
 CONFIG_USB_DEFAULT_PERSIST=y
 # CONFIG_USB_DYNAMIC_MINORS is not set
-# CONFIG_USB_OTG is not set
+CONFIG_USB_OTG=y
 # CONFIG_USB_OTG_WHITELIST is not set
 # CONFIG_USB_OTG_BLACKLIST_HUB is not set
 # CONFIG_USB_LEDS_TRIGGER_USBPORT is not set
@@ -4898,7 +4909,7 @@ CONFIG_MEM_SHARE_QMI_SERVICE=y
 # CONFIG_QCOM_HGSL_TCSR_SIGNAL is not set
 # CONFIG_MSM_PERFORMANCE is not set
 CONFIG_QMP_DEBUGFS_CLIENT=y
-CONFIG_QCOM_QHEE_ENABLE_MEM_PROTECTION=y
+# CONFIG_QCOM_QHEE_ENABLE_MEM_PROTECTION is not set
 CONFIG_QCOM_SMP2P_SLEEPSTATE=y
 CONFIG_QCOM_CDSP_RM=y
 CONFIG_QCOM_CX_IPEAK=y
@@ -5596,6 +5607,9 @@ CONFIG_PSTORE=y
 # CONFIG_PSTORE_ZLIB_COMPRESS is not set
 # CONFIG_PSTORE_LZO_COMPRESS is not set
 CONFIG_PSTORE_LZ4_COMPRESS=y
+CONFIG_PSTORE_COMPRESS=y
+CONFIG_PSTORE_LZ4_COMPRESS_DEFAULT=y
+CONFIG_PSTORE_COMPRESS_DEFAULT="lz4"
 CONFIG_PSTORE_CONSOLE=y
 CONFIG_PSTORE_PMSG=y
 CONFIG_PSTORE_RAM=y
@@ -5702,7 +5716,7 @@ CONFIG_FRAME_WARN=0
 # CONFIG_UNUSED_SYMBOLS is not set
 CONFIG_PAGE_OWNER=y
 # CONFIG_PAGE_OWNER_ENABLE_DEFAULT is not set
-# CONFIG_DEBUG_FS is not set 
+# CONFIG_DEBUG_FS is not set
 # CONFIG_HEADERS_CHECK is not set
 # CONFIG_DEBUG_SECTION_MISMATCH is not set
 CONFIG_SECTION_MISMATCH_WARN_ONLY=y
@@ -5752,7 +5766,7 @@ CONFIG_CC_HAS_SANCOV_TRACE_PC=y
 # CONFIG_WQ_WATCHDOG is not set
 # CONFIG_PANIC_ON_OOPS is not set
 CONFIG_PANIC_ON_OOPS_VALUE=0
-CONFIG_PANIC_TIMEOUT=5
+CONFIG_PANIC_TIMEOUT=-1
 CONFIG_SCHED_DEBUG=y
 CONFIG_SCHED_INFO=y
 # CONFIG_PANIC_ON_SCHED_BUG is not set
