--- a/.github/workflows/miui.yml
+++ b/.github/workflows/miui.yml
@@ -22,7 +22,7 @@ jobs:
                 
     - name: clone Zyc clang 21.0.0git
       run: |
-            mkdir clang && cd clang && curl -LO https://raw.githubusercontent.com/ZyCromerZ/Clang/main/Clang-main-link.txt && zyc-clang.tar.gz && tar -xvf zyc-clang.tar.gz -C clang && rm -rf zyc-clang.tar.gz
+            mkdir clang && cd clang && curl -LO https://raw.githubusercontent.com/ZyCromerZ/Clang/main/Clang-main-link.txt -RLO && tar -C clang/ -xf clang-*.tar.gz
 
     - name: clone GCC arm64 & arm32
       run: |
